add reaction on reservation

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CoffeeMoffee</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="./Images/Vector 2.png" type="image/png">
 </head>
 
 <body>
