--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CoffeeMoffee</title>
+    <meta name='freelancehunt' content='7ee668c6db96527'>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="./Images/Vector 2.png" type="image/png">
 </head>
